@@ -934,7 +934,7 @@ implements TeamTalkConnectionListener,
 
         @Override
         public int getCount() {
-            int count = subchannels.size() + currentusers.size();
+            int count = currentusers.size() + subchannels.size();
             if ((curchannel != null) && (curchannel.nParentID > 0)) {
                 count++; // include parent channel shortcut
             }
@@ -943,6 +943,14 @@ implements TeamTalkConnectionListener,
 
         @Override
         public Object getItem(int position) {
+
+            if (position < currentusers.size()) {
+                return currentusers.get(position);
+            }
+
+            // users are first so subtract these
+            position -= currentusers.size();
+
             if ((curchannel != null) && (curchannel.nParentID > 0)) {
                 if(position == 0) {
                     Channel parent = ttservice.getChannels().get(curchannel.nParentID);
@@ -952,15 +960,9 @@ implements TeamTalkConnectionListener,
                     return new Channel();
                 }
 
-                position--; // substract parent channel shortcut
+                position--; // subtract parent channel shortcut
             }
-            if(position < subchannels.size()) {
-                return subchannels.get(position);
-            }
-            else {
-                position -= subchannels.size();
-                return currentusers.get(position);
-            }
+            return subchannels.get(position);
         }
 
         @Override
@@ -970,19 +972,22 @@ implements TeamTalkConnectionListener,
 
         @Override
         public int getItemViewType(int position) {
+
+            if (position < currentusers.size())
+                return USER_VIEW_TYPE;
+
+            // users are first so subtract these
+            position -= currentusers.size();
+
             if ((curchannel != null) && (curchannel.nParentID > 0)) {
                 if (position == 0) {
                     return PARENT_CHANNEL_VIEW_TYPE;
                 }
-                else if (position <= subchannels.size()) {
-                    return (subchannels.get(position - 1).nMaxUsers > 0) ? CHANNEL_VIEW_TYPE : INFO_VIEW_TYPE;
-                }
-                return USER_VIEW_TYPE;
+
+                position--; // subtract parent channel shortcut
             }
-            else if (position < subchannels.size()) {
-                return (subchannels.get(position).nMaxUsers > 0) ? CHANNEL_VIEW_TYPE : INFO_VIEW_TYPE;
-            }
-            return USER_VIEW_TYPE;
+
+            return (subchannels.get(position).nMaxUsers > 0) ? CHANNEL_VIEW_TYPE : INFO_VIEW_TYPE;
         }
 
         @Override
@@ -999,72 +1004,77 @@ implements TeamTalkConnectionListener,
 
                 final Channel channel = (Channel) item;
 
-                if ((curchannel != null) && (curchannel.nParentID > 0) && (position == 0)) {
-                    // show parent channel shortcut
-                    if (convertView == null ||
-                        convertView.findViewById(R.id.parentname) == null)
-                        convertView = inflater.inflate(R.layout.item_channel_back, parent, false);
-                }
-                else if (channel.nMaxUsers == 0) {
-                    if (convertView == null ||
-                        convertView.findViewById(R.id.titletext) == null)
-                        convertView = inflater.inflate(R.layout.item_info, parent, false);
-                    TextView title = (TextView) convertView.findViewById(R.id.titletext);
-                    TextView details = (TextView) convertView.findViewById(R.id.infodetails);
-                    title.setText(channel.szName);
-                    details.setText(channel.szTopic);
-                }
-                else {
+                switch (getItemViewType(position)) {
+                    case PARENT_CHANNEL_VIEW_TYPE :
+                        // show parent channel shortcut
+                        if (convertView == null ||
+                                convertView.findViewById(R.id.parentname) == null)
+                            convertView = inflater.inflate(R.layout.item_channel_back, parent, false);
+                        break;
 
-                    if (convertView == null ||
-                        convertView.findViewById(R.id.channelname) == null)
-                        convertView = inflater.inflate(R.layout.item_channel, parent, false);
+                    case CHANNEL_VIEW_TYPE :
+                        if (convertView == null ||
+                                convertView.findViewById(R.id.channelname) == null)
+                            convertView = inflater.inflate(R.layout.item_channel, parent, false);
 
-                    ImageView chanicon = (ImageView) convertView.findViewById(R.id.channelicon);
-                    TextView name = (TextView) convertView.findViewById(R.id.channelname);
-                    TextView topic = (TextView) convertView.findViewById(R.id.chantopic);
-                    Button join = (Button) convertView.findViewById(R.id.join_btn);
-                    int icon_resource = R.drawable.channel_orange;
-                    if(channel.bPassword) {
-                        icon_resource = R.drawable.channel_pink;
-                        chanicon.setContentDescription(getString(R.string.text_passwdprot));
-                        chanicon.setImportantForAccessibility(View.IMPORTANT_FOR_ACCESSIBILITY_YES);
-                    }
-                    else {
-                        chanicon.setContentDescription(null);
-                        chanicon.setImportantForAccessibility(View.IMPORTANT_FOR_ACCESSIBILITY_NO);
-                    }
-                    chanicon.setImageResource(icon_resource);
-                    
-                    if(channel.nParentID == 0) {
-                        // show server name as channel name for root channel
-                        ServerProperties srvprop = new ServerProperties();
-                        ttclient.getServerProperties(srvprop);
-                        name.setText(srvprop.szServerName);
-                    }
-                    else {
-                        name.setText(channel.szName);
-                    }
-                    topic.setText(channel.szTopic);
-
-                    OnClickListener listener = new OnClickListener() {
-                        @Override
-                        public void onClick(View v) {
-                            switch(v.getId()) {
-                                case R.id.join_btn : {
-                                    joinChannel(channel);
-                                }
-                                break;
-                            }
+                        ImageView chanicon = (ImageView) convertView.findViewById(R.id.channelicon);
+                        TextView name = (TextView) convertView.findViewById(R.id.channelname);
+                        TextView topic = (TextView) convertView.findViewById(R.id.chantopic);
+                        Button join = (Button) convertView.findViewById(R.id.join_btn);
+                        int icon_resource = R.drawable.channel_orange;
+                        if(channel.bPassword) {
+                            icon_resource = R.drawable.channel_pink;
+                            chanicon.setContentDescription(getString(R.string.text_passwdprot));
+                            chanicon.setImportantForAccessibility(View.IMPORTANT_FOR_ACCESSIBILITY_YES);
                         }
-                    };
-                    join.setOnClickListener(listener);
-                    join.setAccessibilityDelegate(accessibilityAssistant);
-                    join.setEnabled(channel.nChannelID != ttclient.getMyChannelID());
-                }
-                if (channel.nMaxUsers > 0) {
-                    int population = Utils.getUsers(channel.nChannelID, ttservice.getUsers()).size();
-                    ((TextView)convertView.findViewById(R.id.population)).setText((population > 0) ? String.format("(%d)", population) : "");
+                        else {
+                            chanicon.setContentDescription(null);
+                            chanicon.setImportantForAccessibility(View.IMPORTANT_FOR_ACCESSIBILITY_NO);
+                        }
+                        chanicon.setImageResource(icon_resource);
+
+                        if(channel.nParentID == 0) {
+                            // show server name as channel name for root channel
+                            ServerProperties srvprop = new ServerProperties();
+                            ttclient.getServerProperties(srvprop);
+                            name.setText(srvprop.szServerName);
+                        }
+                        else {
+                            name.setText(channel.szName);
+                        }
+                        topic.setText(channel.szTopic);
+
+                        OnClickListener listener = new OnClickListener() {
+                            @Override
+                            public void onClick(View v) {
+                                switch(v.getId()) {
+                                    case R.id.join_btn : {
+                                        joinChannel(channel);
+                                    }
+                                    break;
+                                }
+                            }
+                        };
+                        join.setOnClickListener(listener);
+                        join.setAccessibilityDelegate(accessibilityAssistant);
+                        join.setEnabled(channel.nChannelID != ttclient.getMyChannelID());
+
+                        if (channel.nMaxUsers > 0) {
+                            int population = Utils.getUsers(channel.nChannelID, ttservice.getUsers()).size();
+                            ((TextView)convertView.findViewById(R.id.population)).setText((population > 0) ? String.format("(%d)", population) : "");
+                        }
+
+                        break;
+
+                    case INFO_VIEW_TYPE :
+                        if (convertView == null ||
+                                convertView.findViewById(R.id.titletext) == null)
+                            convertView = inflater.inflate(R.layout.item_info, parent, false);
+                        TextView title = (TextView) convertView.findViewById(R.id.titletext);
+                        TextView details = (TextView) convertView.findViewById(R.id.infodetails);
+                        title.setText(channel.szName);
+                        details.setText(channel.szTopic);
+                        break;
                 }
             }
             else if(item instanceof User) {
